# mcp_for_object_detection

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh  specification.md  start_server.bat  start_server.sh  start_server_debug.sh  start_server_portable.sh  test_detector.py  test_server.py  test_visualization.py
src/: __init__.py  __main__.py  detector.py  server.py
